2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Source/STTranscript.m (-showError:): Fix space leak detected by clang.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Source/STScriptsPanel.m (-selectScript:): Validate Run button of the
    scripts panel.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Source/STApplicationScriptingController.m (-scriptingMenu): Protect
    against GNUstep stubbornly replacing the application's main menu.

    * Source/STScriptsPanel.m (-selectScript:): Handle case where the
    script's description is nil.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Source/STTranscript.h (-window):
    * Source/NSApplication+additions.h (-applicationNameForScripting):
    Declare public methods.
    * Source/NSApplication+additions.m (-applicationNameForScripting):
    Fix typo in method name.

    * Source/NSApplication+additions.m (-_createDefaultScriptingEnvironment):
    Fix to no longer use methods which were removed when adding STConversation.

    * Source/STApplicationScriptingController.m (-executeScript:,
    -executeScriptString:inEnvironment:): Update for changes when
    STLanguage was removed and STContext was introduced.

    * Source/STApplicationScriptingController.h (-executeScript:):
    * Source/STApplicationScriptingController.m (-executeScript:): The
    method expects an STFileScript.

    * Source/STScriptsPanel.h (-selectedScript):
    * Source/STScriptsPanel.m (-run, -selectScript, -browse, -selectedScript):
    Method seletecedScript returns a STFileScript.

2003 May 2  Stefan Urbanek <urbanek@host.sk>

    * Added 'Objects' searching in application.
    * Added ScriptingInfo.plist template
    * GNUmakefile: removed inclusion of source-distribution.make
    
2003 May 1  Stefan Urbanek <urbanek@host.sk>

    * Support: updated files to use #include instead of #import

2003 Apr 04  David Ayers  <d.ayers@inode.at>
